Resolve pointer event issue on mobile nav slideout overlay

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -143,11 +143,11 @@ main {
 #mobile-overlay {
   right: 0;
   top: 66px;
-  z-index: 1;
   width: 100%;
   height: 100%;
   overflow: hidden;
   position: absolute;
+  pointer-events: none;
   background-color: rgba(0, 0, 0, 0);
   transition: background-color 0.3s ease-in-out;
 }
@@ -169,8 +169,9 @@ main {
   background-color: white;
   border-left: 1px solid rgb(212, 212, 212);
 
+  pointer-events: auto;
   margin-right: -301px;
-  transition: margin 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 #mobile-overlay menu.open {
@@ -186,6 +187,7 @@ main {
 }
 
 #mobile-overlay, #mobile-overlay menu {
+  z-index: 1;
   display: none;
 }
 
